--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,11 @@
         <div class="b-main b-main--portfolio">
           <div class="container">
             <div class="b-main__inner">
-              <h1 class="b-main__title"></h1>
+              <div class="b-main__circle b-main__circle--1"></div>
+              <div class="b-main__circle b-main__circle--2"></div>
+              <div class="b-main__circle b-main__circle--3"></div>
+              <div class="b-main__dots"></div>
+              <h1 class="b-main__title">Наши работы</h1>
               <div class="b-portfolio">
                 <ul class="b-portfolio__list">
                   <li class="b-portfolio__item">
