--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,28 @@
   </head>
   <body>
     <div class="w-page">
-      <div class="w-menu"></div>
+      <div class="w-menu">
+        <div class="b-menu">
+          <div class="b-menu__inner">
+            <div class="b-menu__right">
+              <button class="b-menu__close"></button>
+              <div class="b-menu__wrap">
+                <ul class="b-menu__list">
+                  <lu class="b-menu__item"><a class="b-menu__link" href="">Портфолио</a></lu>
+                  <lu class="b-menu__item"><a class="b-menu__link" href="">О нас</a></lu>
+                  <lu class="b-menu__item"><a class="b-menu__link" href="">Контакты</a></lu>
+                </ul>
+              </div>
+            </div>
+            <div class="b-menu__left">
+              <div class="b-menu__wrap">
+                <div class="b-menu__socials b-socials"><a class="b-socials__item b-socials__item--vk" href=""></a><a class="b-socials__item b-socials__item--behance" href=""></a><a class="b-socials__item b-socials__item--mail" href=""></a><a class="b-socials__item b-socials__item--phone" href=""></a></div>
+                <p class="b-menu__copyright"><span class="js-year">2018</span> © Owl Wing</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="w-body">
         <div class="b-header">
           <div class="container">
@@ -91,6 +112,14 @@
                   </li>
                 </ul>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="b-footer">
+          <div class="container">
+            <div class="b-footer__inner">
+              <div class="b-footer__socials b-socials"><a class="b-socials__item b-socials__item--vk" href=""></a><a class="b-socials__item b-socials__item--behance" href=""></a><a class="b-socials__item b-socials__item--mail" href=""></a><a class="b-socials__item b-socials__item--phone" href=""></a></div>
+              <p class="b-footer__copyright"><span class="js-year">2018</span> © Owl Wing</p>
             </div>
           </div>
         </div>
