--- a/app/index — копия.html
+++ b/app/index — копия.html
@@ -73,42 +73,42 @@
                   <li class="b-portfolio__item">
                     <div class="b-portfolio__img" style="background-image: url(img/portfolio-img-1.jpg);"></div>
                     <div class="b-portfolio__item-circle"></div>
-                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="single.html">Sheff Log</a>
+                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="">Sheff Log</a>
                       <p class="b-portfolio__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?</p>
                     </div>
                   </li>
                   <li class="b-portfolio__item">
                     <div class="b-portfolio__img" style="background-image: url(img/portfolio-img-1.jpg);"></div>
                     <div class="b-portfolio__item-circle"></div>
-                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="single.html">Sheff Log</a>
+                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="">Sheff Log</a>
                       <p class="b-portfolio__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?</p>
                     </div>
                   </li>
                   <li class="b-portfolio__item">
                     <div class="b-portfolio__img" style="background-image: url(img/portfolio-img-1.jpg);"></div>
                     <div class="b-portfolio__item-circle"></div>
-                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="single.html">Sheff Log</a>
+                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="">Sheff Log</a>
                       <p class="b-portfolio__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?</p>
                     </div>
                   </li>
                   <li class="b-portfolio__item">
                     <div class="b-portfolio__img" style="background-image: url(img/portfolio-img-1.jpg);"></div>
                     <div class="b-portfolio__item-circle"></div>
-                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="single.html">Sheff Log</a>
+                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="">Sheff Log</a>
                       <p class="b-portfolio__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?</p>
                     </div>
                   </li>
                   <li class="b-portfolio__item">
                     <div class="b-portfolio__img" style="background-image: url(img/portfolio-img-1.jpg);"></div>
                     <div class="b-portfolio__item-circle"></div>
-                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="single.html">Sheff Log</a>
+                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="">Sheff Log</a>
                       <p class="b-portfolio__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?</p>
                     </div>
                   </li>
                   <li class="b-portfolio__item">
                     <div class="b-portfolio__img" style="background-image: url(img/portfolio-img-1.jpg);"></div>
                     <div class="b-portfolio__item-circle"></div>
-                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="single.html">Sheff Log</a>
+                    <div class="b-portfolio__item-wrap"><a class="b-portfolio__name" href="">Sheff Log</a>
                       <p class="b-portfolio__description"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, obcaecati?</p>
                     </div>
                   </li>
