--- a/app/single.html
+++ b/app/single.html
@@ -28,9 +28,9 @@
               <button class="b-menu__close"></button>
               <div class="b-menu__wrap">
                 <ul class="b-menu__list">
-                  <lu class="b-menu__item"><a class="b-menu__link" href="">Портфолио</a></lu>
-                  <lu class="b-menu__item"><a class="b-menu__link" href="">О нас</a></lu>
-                  <lu class="b-menu__item"><a class="b-menu__link" href="">Контакты</a></lu>
+                  <li class="b-menu__item"><a class="b-menu__link" href="index.html#portfolio">Портфолио</a></li>
+                  <li class="b-menu__item"><a class="b-menu__link" href="about.html">О нас</a></li>
+                  <li class="b-menu__item"><a class="b-menu__link" href="contacts.html">Контакты</a></li>
                 </ul>
               </div>
             </div>
@@ -46,7 +46,7 @@
       <div class="w-body">
         <div class="b-header">
           <div class="container">
-            <div class="b-header__inner"><img class="b-header__logo" src="img/logo.png" alt="">
+            <div class="b-header__inner"><a href="index.html"><img class="b-header__logo" src="img/logo.png" alt=""></a>
               <button class="b-header__toggle"></button>
             </div>
           </div>
