--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
             <div class="b-hero__inner">
               <div class="b-hero__circle b-hero__circle--1"></div>
               <div class="b-hero__circle b-hero__circle--2"></div>
-              <p class="b-hero__slogan">Делаем дизайн от нас, для вас именно поэтому <br> Owl Wing всегда с вами.</p>
+              <p class="b-hero__slogan">Делаем дизайн от нас, для вас именно поэтому Owl Wing всегда с вами.</p>
             </div>
           </div>
         </div>
