--- a/app/contacts.html
+++ b/app/contacts.html
@@ -69,8 +69,8 @@
                           <input class="b-form__field" type="text" name="name" id="name">
                         </div>
                         <div class="b-form__group">
-                          <label class="b-form__label" for="phone">Ваш e-mail</label>
-                          <input class="b-form__field" type="tel" name="phone" id="phone">
+                          <label class="b-form__label" for="email">Ваш e-mail</label>
+                          <input class="b-form__field" type="tel" name="email" id="email">
                         </div>
                         <div class="b-form__group">
                           <label class="b-form__label" for="msg">Комментарий</label>
